--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -605,7 +605,8 @@ there are four repositories that we have been actively contributing to for the l
 		rustdoc version,
 	\item \textbf{trustfall-rustdoc} -- allows to run Trustfall queries over rustdoc regardless of
 		the version,
-	\item \textbf{cargo-semver-checks-action} -- the tool in form of a GitHub Action.
+	\item \textbf{cargo-semver-checks-action} -- the tool in form of a GitHub Action that can
+	    be added to GitHub repositories.
 \end{itemize}
 
 \begin{figure}[h]
