--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -570,8 +570,7 @@ output received from rustdoc into a more managable form.
 Trustfall is a special query engine, designed to query any data source or a combination of data
 sources such as APIs, raw files (JSON, CSV, etc.), git commits and many more. Its main idea is to
 represent the data as an organised graph with vertices and edges that the engine can traverse. To
-navigate during the search, it follows consecutive filtering rules defined by the user in a special
-\texttt{.ron} (rusty object notation) file. These files are formally named \texttt{lints}.
+navigate during the search, it follows consecutive filtering rules defined by the user. In cargo-semver-checks, these rules are contained within \texttt{.ron} files which are called \texttt{lints} inside the project.
 
 \begin{figure}[h]
 	\centering
