--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -560,16 +560,20 @@ into their workflow:
 
 \chapter{Theory}\label{r:chapter_theory}
 
-\section{Project structure}\label{r:section_projectstructure}
+\section{Project structure}\label{r:section_project_structure}
 In order to check two versions of a crate for semver violations, our tool needs a consistent method
-for generating the data to be compared. This is achieved by using rustdoc (from the official Rust toolchain) for
-generating the documentation for Rust projects. However, the documentation itself often changes its format and thus is not stable nor organized enough to be directly used by cargo-semver-checks. For this reason, the tool uses Trustfall to parse the
-output received from rustdoc into a more managable form.
+for generating the data to be compared. This is achieved by using rustdoc (from the official
+Rust toolchain) for generating the documentation for Rust projects. However, the documentation
+itself often changes its format and thus is not stable nor organized enough to be directly used by
+cargo-semver-checks. For this reason, the tool uses Trustfall to parse the output received from
+rustdoc into a more managable form.
 
 Trustfall is a special query engine, designed to query any data source or a combination of data
 sources such as APIs, raw files (JSON, CSV, etc.), git commits and many more. Its main idea is to
 represent the data as an organised graph with vertices and edges that the engine can traverse. To
-navigate during the search, it follows consecutive filtering rules defined by the user. In cargo-semver-checks, these rules are contained within \texttt{.ron} files which are called \texttt{lints} inside the project.
+navigate during the search, it follows consecutive filtering rules defined by the user.
+In cargo-semver-checks, these rules are contained within \texttt{.ron} files which are called
+\texttt{lints} inside the project (more detail in section \ref{r:section_cargo_semver_checks}).
 
 Despite being the project's core component, new lints are not the only thing we developed. In total
 there are four repositories that we have been actively contributing to for the last few months:
@@ -590,7 +594,7 @@ there are four repositories that we have been actively contributing to for the l
 	\includegraphics[width=\linewidth]{project-structure-diagram.png}
 \end{figure}
 
-\section{cargo-semver-checks}
+\section{cargo-semver-checks}\label{r:section_cargo_semver_checks}
 
 TODO:
 \begin{itemize}
