--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -561,7 +561,7 @@ into their workflow:
 \chapter{Theory}\label{r:chapter_theory}
 
 \section{Project structure}\label{r:section_project_structure}
-In order to check two versions of a crate for semver violations, our tool needs a consistent method
+In order to check two versions of a crate for semver violations, the tool needs a consistent method
 for generating the data to be compared. This is achieved by using rustdoc (from the official
 Rust toolchain) for generating the documentation for Rust projects. However, the documentation
 itself often changes its format and thus is not stable nor organized enough to be directly used by
