--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -563,13 +563,13 @@ into their workflow:
 \section{Project structure}\label{r:section_project_structure}
 In order to check two versions of a crate for semver violations, the tool needs a consistent method
 for generating the data to be compared. This is achieved by using rustdoc (from the official
-Rust toolchain) for generating the documentation for Rust projects. However, the documentation
+Rust toolchain) to generate the documentation for Rust projects. However, the documentation
 itself often changes its format and thus is not stable nor organized enough to be directly used by
 cargo-semver-checks. For this reason, the tool uses Trustfall to parse the output received from
-rustdoc into a more managable form.
+rustdoc into a more manageable form.
 
 Trustfall is a special query engine, designed to query any data source or a combination of data
-sources such as APIs, raw files (JSON, CSV, etc.), git commits and many more. Its main idea is to
+sources such as APIs, raw files (JSON, CSV, etc.), git version control, webpages and many more. Its main idea is to
 represent the data as an organised graph with vertices and edges that the engine can traverse. To
 navigate during the search, it follows consecutive filtering rules defined by the user.
 In cargo-semver-checks, these rules are contained within \texttt{.ron} files which are called
