--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -580,6 +580,30 @@ the two versions is retrieved from rustdoc using Trustfall, which allows to intr
 of abstraction that remains constant (functions, structs, enums, variants etc.). To learn about the
 tool's practical usage and long-term goals, see chapter \ref{r:chapter_vision}.
 
+\begin{figure}[h]
+	\centering
+	\caption{Example of a lint}
+	\includegraphics[width=\linewidth]{lint-example.png}
+\end{figure}
+
+In cargo-semver-checks, each lint consists of the following fields:
+\begin{itemize}
+	\item \texttt{id} -- a short, unique name identifying the lint, most often matching the
+		filename that contains the lint,
+	\item \texttt{human\_readable\_name} -- a longer, human-readable name,
+	\item \texttt{description} -- general information about what is the detected problem,
+	\item \texttt{required\_update} -- the minimum version bump needed to avoid breaking semver,
+	\item \texttt{reference\_link} -- a link to the official Rust documentation corresponding to
+		the issue (if available),
+	\item \texttt{query} -- the Trustfall filtering rules responsible for comparing two versions and
+		detecting semver violations (described below in more detail),
+	\item \texttt{arguments} -- optional, user-defined Trustfall constants for the query,
+	\item \texttt{error\_message} -- a longer and more technical information, telling the user
+	    about the exact semver violation that occured and what could have caused it,
+	\item \texttt{per\_result\_error\_template} -- the name of the item that broke semver and
+	    its exact position in the code.
+\end{itemize}
+
 \section{trustfall-rustdoc-adapter}
 
 TODO:
