add the images directory

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1,5 +1,7 @@
 \documentclass[licencjacka,en]{pracamgr}
 \usepackage{hyperref}
+\usepackage{graphicx}
+\graphicspath{ {./images/} }
 
 \autor{Tomasz Nowak}{429575}
 \autori{Michał Staniewski}{429598}
