--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -582,7 +582,7 @@ the two versions is retrieved from rustdoc using Trustfall, which allows to intr
 of abstraction that remains constant (functions, structs, enums, variants etc.). To learn about the
 tool's practical usage and long-term goals, see chapter \ref{r:chapter_vision}.
 
-\begin{figure}[h]
+\begin{figure}[h!]
 	\centering
 	\caption{Example of a lint}
 	\includegraphics[width=\linewidth]{lint-example.png}
