--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -590,8 +590,9 @@ the following fields:
 
 \begin{figure}[h]
 	\centering
-	\caption{Example of a lint}
 	\includegraphics[width=\linewidth]{lint-example.png}
+	\caption{Example of a lint}
+	\label{fig:enum_missing_lint}
 \end{figure}
 
 \begin{itemize}
@@ -609,6 +610,28 @@ the following fields:
 	    about the exact semver violation that occured and what could have caused it,
 	\item \texttt{per\_result\_error\_template} -- the name of the item that broke semver and
 	    its exact position in the code.
+\end{itemize}
+
+Each query defines the rules for filtering the baseline and current versions of a crate. Consider
+the following example:
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\linewidth]{lint-query-example.png}
+	\caption{Example of a lint's query}
+\end{figure}
+
+The query above is part of the lint seen in figure \ref{fig:enum_missing_lint} and can
+be interpreted as:
+
+\begin{itemize}
+	\item
+	\item
+	\item
+	\item
+	\item
+	\item
+	\item
 \end{itemize}
 
 \section{trustfall-rustdoc-adapter}
