--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -598,6 +598,7 @@ the following methods:
 	\item \texttt{resolve\_neighbors} -- finds the neighboring vertices across an edge,
 	\item \texttt{resolve\_coercion} -- attempts to coerce a vertex into a more specific type.
 \end{itemize}
+These methods are used by the Trustfall engine to execute lint queries written in the Trustfall language.
 
 \section{trustfall-adapter}
 
