--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -589,7 +589,7 @@ TODO:
 	\item describe what the adapter does and how trustfall-rustdoc-adapter achieves that
 \end{itemize}
 
-\section{trustfall-adapter}
+\section{trustfall-rustdoc}
 
 TODO:
 \begin{itemize}
