Describe the action

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -598,10 +598,9 @@ TODO:
 
 \section{cargo-semver-checks-action}
 
-TODO:
-\begin{itemize}
-	\item describe the purpose of this subproject and what it does
-\end{itemize}
+Using cargo-semver-checks in a continuous integration workflow consists of three main steps: setting up the Rust toolchain,
+installing cargo-semver-checks, and finally -- running it on a~crate. The aim of the GitHub Action is to simplify
+this process and make it a single step that can be easily added to the workflow file.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %           Implementation            %
