--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -579,7 +579,7 @@ cargo-semver-checks goal is to detect semver violations within Rust crates. Give
 of the same crate -- baseline (considered valid) and current (new) -- the tool parses them using
 Trustfall to introduce a layer of abstraction that remains constant (functions, structs, enums,
 variants etc.). After that, the versions are compared using all of the implemented lints to find
-possible public API changes. They are the core component of the project and are carefully designed
+the breaking public API changes. They are the core component of the project and are carefully designed
 so that one break can only be reported by one, precise lint.
 
 % Possibly introduce a pagebreak here before the final merge into main, depending on how the layout
