--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -602,7 +602,7 @@ the following fields:
 	\item \texttt{description} -- general information about what is the detected problem,
 	\item \texttt{required\_update} -- the minimum version bump needed to avoid breaking semver,
 	\item \texttt{reference\_link} -- a link to the official Rust documentation corresponding to
-		the issue (if available),
+		the issue (when available),
 	\item \texttt{query} -- the Trustfall filtering rules responsible for comparing two versions and
 		detecting semver violations (described below in more detail),
 	\item \texttt{arguments} -- optional, user-defined Trustfall constants for the query,
