--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -575,7 +575,7 @@ TODO:
 \end{itemize}
 
 \section{cargo-semver-checks}
-cargo-semver-checks goal is to detect semver violations within Rust crates. Given two versions
+The goal of cargo-semver-checks is to detect semver violations within Rust crates. Given two versions
 of the same crate -- baseline (considered valid) and current (new) -- the tool parses them using
 Trustfall to introduce a layer of abstraction that remains constant (functions, structs, enums,
 variants etc.). After that, the versions are compared using all of the implemented lints to find
