--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -635,7 +635,7 @@ elements such as:
 		name,
 	\item \texttt{\%path} -- \texttt{\%} refers to a tagged element with the same name.
 \end{itemize}
-During its execution, Trustfall successively:
+Thus, during its execution, Trustfall successively:
 \begin{itemize}
 	\item collects all of the baseline crate's public Enums, tagging their paths,
 	\item collects all of the current crate's public Enums such that their path is present among
