--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -629,7 +629,7 @@ elements such as:
 	\item \texttt{@output} -- specifies which values are returned by the query,
 	\item \texttt{@optional} -- hides all of the underlying \texttt{@output}, requiring additional
 		execution flags to show it,
-	\item \texttt{... on Enum} -- \texttt{...} inlines the query to one, specified kind of items,
+	\item \texttt{... on Enum} -- \texttt{...} inlines the query to the specified kind of items,
 		in this case Enums,
 	\item \texttt{\$public}, \texttt{\$zero} -- \texttt{\$} refers to the argument with the same
 		name,
