picture descriptions & ref link

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -591,7 +591,8 @@ the following fields:
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=\linewidth]{lint-example.png}
-	\caption{Example of a lint}
+	\caption{The \texttt{enum\_missing} lint (for its entire query, see figure
+		\ref{fig:enum_missing_lint_query})}
 	\label{fig:enum_missing_lint}
 \end{figure}
 
@@ -617,7 +618,8 @@ a crate. Consider the following example:
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=\linewidth]{lint-query-example.png}
-	\caption{Example of a lint's query}
+	\caption{The \texttt{enum\_missing} lint's query}
+	\label{fig:enum_missing_lint_query}
 \end{figure}
 The query above is part of the lint seen in figure \ref{fig:enum_missing_lint}. It contains
 elements such as:
