explain more what a directive is

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -627,7 +627,7 @@ elements such as:
 	\item \texttt{@tag} -- allows the value to be used elsewhere in the query by
 		tagging its name,
 	\item \texttt{@filter}, \texttt{@fold}, \texttt{@transform} -- some of the available Trustfall
-		directives,
+		directives that modify the sets of items processed by the query,
 	\item \texttt{@output} -- specifies which values are returned by the query,
 	\item \texttt{@optional} -- hides all of the underlying \texttt{@output}, requiring additional
 		execution flags to show it,
