--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -576,13 +576,17 @@ TODO:
 
 \section{cargo-semver-checks}
 The goal of cargo-semver-checks is to detect semver violations within Rust crates. Given two versions
-of the same crate -- baseline (considered valid) and current (new) -- the tool parses them using
-Trustfall to introduce a layer of abstraction that remains constant (functions, structs, enums,
-variants etc.). After that, the versions are compared using all of the implemented lints to find
-the breaking public API changes. They are the core component of the project and are carefully designed
-so that one break can only be reported by one, precise lint. This is especially important because
-the user must be provided with an extensive, coherent and clear information about the error
-they have made.
+of the same crate:
+\begin{itemize}
+	\item baseline -- the existing version that defines a public API,
+	\item current -- the modified version of baseline that is vulnerable to breaking semver,
+\end{itemize}
+the tool parses them using Trustfall to introduce a layer of abstraction that remains constant
+(functions, structs, enums, variants etc.). After that, the versions are compared using all of
+the implemented lints to find the breaking public API changes. They are the core component of
+the project and are carefully designed so that one break can only be reported by one, precise
+lint. This is especially important because the user must be provided with an extensive, coherent
+and clear information about the error they have made.
 
 % Possibly introduce a pagebreak here before the final merge into main, depending on how the layout
 % looks like -- it would be great to have the header, image and bullet list all on one page!
