--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -578,8 +578,8 @@ TODO:
 The goal of cargo-semver-checks is to detect semver violations within Rust crates. Given two versions
 of the same crate:
 \begin{itemize}
-	\item baseline -- the existing version that defines a public API,
-	\item current -- the modified version of baseline that is vulnerable to breaking semver,
+	\item \textbf{baseline} -- the existing version that defines a public API,
+	\item \textbf{current} -- the modified version of baseline that is vulnerable to breaking semver,
 \end{itemize}
 the tool parses them using Trustfall to introduce a layer of abstraction that remains constant
 (functions, structs, enums, variants etc.). After that, the versions are compared using all of
