--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -585,7 +585,7 @@ the tool parses them using Trustfall to introduce a layer of abstraction that re
 (functions, structs, enums, variants etc.). After that, the versions are compared using all of
 the implemented lints to find the breaking public API changes. They are the core component of
 the project and are carefully designed so that one break can only be reported by one, precise
-lint. This is especially important because the user must be provided with an extensive, coherent
+lint. This is especially important because we want the user to be provided with an extensive, coherent
 and clear information about the error they have made.
 
 % Possibly introduce a pagebreak here before the final merge into main, depending on how the layout
