--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -582,7 +582,7 @@ of the same crate:
 	\item \textbf{current} -- the modified version of the baseline that is vulnerable to breaking semver,
 \end{itemize}
 the tool parses them using Trustfall to introduce a layer of abstraction that remains constant
-(functions, structs, enums, variants, etc). After that, the versions are compared using all of
+(functions, structs, enums, variants, etc.) After that, the versions are compared using all of
 the implemented lints to find the breaking public API changes. They are the core component of
 the project and are carefully designed so that one break can only be reported by one, precise
 lint. This is especially important because we want the user to be provided with an extensive, coherent
