Apply suggestions from code review
Co-authored-by: Tomasz Nowak <36604952+tonowak@users.noreply.github.com>

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -586,10 +586,10 @@ Using cargo-semver-checks in a continuous integration workflow consists of three
 installing cargo-semver-checks, and finally -- running it on a~crate. The aim of the cargo-semver-checks-action is to simplify
 this process and make it a~single step, hiding the technical details from the user.
 
-cargo-semver-checks-action is implemented as a~GitHub Action, which is a~way of creating a resusable GitHub workflow.
+cargo-semver-checks-action is implemented as a~GitHub Action, which is a~way of creating a reusable GitHub workflow.
 It is hosted on a public repository and can be used in continuous integration by referencing its name and version
 in the workflow file. Besides being run with default parameters, the action can be configured by providing optional inputs
-(such as the name of the crate to check), which are passed to the CLI of cargo-semver-checks binary.
+(such as the name of the crate to check), which are passed to the CLI of the cargo-semver-checks binary.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %           Implementation            %
