--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -593,7 +593,7 @@ TODO:
 
 Rustdoc output format is under constant development and changes between Rust versions. Since
 the tool is supposed to be widely used, it is important to ensure that it
-works with all recent versions of Rust (and consequently with all recent versions of
+works with the recent versions of Rust (and consequently with all recent versions of
 rustdoc). Therefore, the trustfall-rustdoc-adapter is developed on several different
 branches, each of them handling a~specific rustdoc version.
 
