--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -600,7 +600,7 @@ branches, each of them handling a~specific rustdoc version.
 trustfall-rustdoc brings them together in the form of a single tool. Given the path to the rustdoc JSON
 output, trustfall-rustdoc loads the file, detects which rustdoc version was used and chooses the
 corresponding trustfall-rustdoc-adapter branch to run the Trustfall queries.
-This provides a version-independent interface, which is used by cargo-semver-checks.
+This provides a version-independent interface which is used by cargo-semver-checks.
 
 \section{cargo-semver-checks-action}
 
