--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -594,7 +594,7 @@ TODO:
 Rustdoc output format is under constant development and changes between Rust versions. Since
 the tool is supposed to be widely used, it is important to ensure that it
 works with the recent versions of Rust (and consequently with all recent versions of
-rustdoc). Therefore, the trustfall-rustdoc-adapter is developed on several different
+rustdoc). Therefore, the trustfall-rustdoc-adapter is developed on several different git
 branches, each of them handling a~specific rustdoc version.
 
 trustfall-rustdoc brings them together in the form of a single tool. Given the path to the rustdoc JSON
