--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -552,7 +552,7 @@ there are four repositories that we have been actively contributing to for the l
 		(Trustfall queries),
 	\item \textbf{trustfall-rustdoc-adapter} -- implements the Trustfall interface for one specific
 		rustdoc version,
-	\item \textbf{trustfall-rustdoc} -- allows to run Trustfall queries over rustdoc regardless of
+	\item \textbf{trustfall-rustdoc} -- allows running Trustfall queries over rustdoc regardless of
 		the currently used rustdoc version,
 	\item \textbf{cargo-semver-checks-action} -- the tool in form of a GitHub Action that can
 	    be added to GitHub repositories.
