--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -572,7 +572,7 @@ of the same crate:
 	\item \textbf{baseline} -- the existing version that defines a public API,
 	\item \textbf{current} -- the modified version of the baseline that is vulnerable to breaking semver,
 \end{itemize}
-the tool parses them using Trustfall to introduce a layer of abstraction that remains constant
+the tool uses Trustfall as a layer of abstraction that remains constant regardless of changes in the underlying JSON representation format
 (functions, structs, enums, variants, etc.) After that, the versions are compared using all of
 the implemented lints to find the breaking public API changes. They are the core component of
 the project and are carefully designed so that one break can only be reported by one, precise
